<resources>
    <string name="app_name">demo</string>
    <string name="update_number">修改手机号</string>
    <string name="update_app_name">新商育App</string>
    <string name="update_pwd">修改密码</string>
    <string name="bind_email">绑定邮箱</string>
    <string name="update_email">修改邮箱</string>

    <string name="my_head_img">头像</string>
    <string name="my_name">姓名</string>
    <string name="my_nick_name">昵称</string>
    <string name="my_six">性别</string>
    <string name="my_plan_name">公司名称</string>
    <string name="my_department">部门</string>
    <string name="my_school">毕业院校</string>
    <string name="my_Education">学历</string>
    <string name="my_major">专业</string>
    <string name="my_dress">居住地</string>
    <string name="my_email">邮箱</string>
    <string name="my_email2">新邮箱</string>
    <string name="my_phone">手机号</string>
    <string name="my_phone_and_email">手机号/邮箱</string>
    <string name="show_wt">问题截图</string>
    <string name="please_set">请输入...</string>

    <string name="dialog_save_my_info">保存成功，并获得%d</string>
    <string name="save_my_info">保存</string>
    <string name="set_money">充值</string>

    <string name="this_update">立即更新</string>
    <string name="this_is_Newest">当前已是最新版本</string>
    <string name="check_this_is_Newest">检查新版本</string>

    <string name="safe_number">账号与安全</string>
    <string name="read">阅读偏好</string>
    <string name="unit">插件</string>
    <string name="clear">清除缓存</string>
    <string name="clear2">清理完毕</string>
    <string name="check_update">检查更新</string>
    <string name="login_out">退出登陆</string>

    <string name="email_success1">恭喜您</string>
    <string name="email_success2">邮箱绑定成功！</string>
    <string name="email_success3">邮箱修改成功</string>

    <string name="phone_success">更改手机号成功</string>
    <string name="to_login">重新登录</string>

    <string name="number_format">验证码</string>
    <string name="privacy_code">获取验证码</string>
    <string name="login_code_hint">请输入验证码</string>
    <string name="login_email_hint">请输入邮箱</string>
    <string name="login_email_hint2">请输入新的邮箱</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_phone_hint_and_email">请输入手机号/邮箱</string>
    <string name="frequently">操作过于频繁，请稍后再试</string>


    <string name="take_Photo">拍照</string>
    <string name="do_select_xc">从相册选择</string>
    <string name="do_cancel">取消</string>

    <string name="do_clear_show">清空提示</string>
    <string name="do_clear_show_text">确认要情况吗？清空后将永久无法找回，请谨慎操作。</string>
    <string name="do_clear">清空</string>

    <string name="do_setting">提示</string>
    <string name="do_setting_show">确定要删除所有的缓存吗？问答草稿，离线内容及图片均会被清除。</string>

    <string name="do_delete_show">删除提示</string>
    <string name="do_delete_show_text">确认删除已选中的历史？</string>
    <string name="do_delete">删除</string>
    <string name="do_delete1">一键清空</string>

    <string name="do_system_show">系统提示</string>
    <string name="do_system_show_text">是否确定删除此条商圈信息</string>
    <string name="do_yes">确定</string>
    <string name="do_no">返回</string>

    <string name="clear_all">一键清空</string>
    <string name="choose">编辑</string>
    <string name="hint">隐藏</string>

    <string name="old_pwd">旧密码</string>
    <string name="x_pwd">新密码</string>
    <string name="x_pwd2">重复密码</string>
    <string name="other_pwd">其他方式修改密码</string>
    <string name="set_pwd">请输入旧密码</string>
    <string name="set_pwd2">请输入新密码</string>
    <string name="set_pwd3">请再次输入新密码</string>
    <string name="set_pwd4">请验证二次新密码是否正确</string>
    <string name="set_pwd7">新密码与旧密码一致，请确认</string>
    <string name="set_pwd8">新密码长度必须大或等于8，请确认</string>
    <string name="set_pwd5">密码修改成功</string>
    <string name="set_pwd6">设置密码</string>

    <string name="feedback_success">反馈成功</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_show_text">感谢您对平台的关注与支持，我们会认真处理你的\n反馈，尽快修复和完善相关功能</string>
    <string name="close">关闭</string>
    <string name="next">下一步</string>

    <string name="mine_data">我的资料</string>
    <string name="mydata">个人资料</string>
    <string name="update_data">编辑资料</string>
    <string name="mine_data_search_hint">作者 书名 出版社 关键词</string>
    <string name="mine_data_shopping">商城</string>

    <string name="my_quan">优惠券</string>
    <string name="my_car">道具</string>
    <string name="jyxq">交易详情</string>

    <string name="login_out3">确认退出</string>
    <string name="login_out2">是否退出登录？</string>
    <string name="setting">设置</string>

    <string name="account">账号与安全</string>
    <string name="wc">完成</string>
    <string name="sming">说明</string>

    <string name="money">钱包</string>
    <string name="xnb">虚拟币</string>
    <string name="record">交易记录</string>
    <string name="recharge">充值</string>
    <string name="pay_zfb">支付宝</string>
    <string name="pay_we_chat">微信</string>

    <string name="login_phone_number">手机号</string>
    <string name="login_code">验证码</string>
    <string name="login_get_code">获取验证码</string>
    <string name="login_three">三方登录</string>
    <string name="login_phone_error_hint">请输入正确的手机号</string>
    <string name="login_email_error_hint">请输入正确的邮箱地址</string>
    <string name="login_phone_code_success">短信验证码发送成功</string>
    <string name="login_restart_get_code">重新获取</string>
    <string name="login_get_code_count">S</string>
    <string name="login_code_error_hint">请输入验证码</string>

    <string name="help">帮助中心</string>
    <string name="kf">客服</string>
    <string name="cnxw">猜你想问</string>

    <string name="dhjl">兑换记录</string>
    <string name="jf_sc">积分商城</string>
    <string name="jfgz">积分规则</string>
    <string name="go_shapping">去商城</string>
    <string name="jxdh">精选兑换</string>


    <string name="tjfk">提交反馈</string>
    <string name="my_vip">我的VIP</string>

    <string name="follow">关注</string>
    <string name="fs">粉丝</string>

    <string name="my_see">我在阅读</string>
    <string name="lscj">历史成绩</string>

    <string name="scang">收藏</string>
    <string name="pl">评论</string>
    <string name="zan">点赞</string>
    <string name="ls">历史</string>

    <string name="sq">商圈</string>
    <string name="wx">微信</string>
    <string name="qq">QQ</string>

    <string name="shapping_zf">购买相框需支付</string>
    <string name="num">数量：</string>
    <string name="xnb2">虚拟币：</string>

    <string name="zj">足迹</string>
    <string name="sczp">上传照片</string>
    <string name="bt">标题:</string>
    <string name="please_xkbt">请输入相框标题</string>

    <string name="yjj">已解决</string>
    <string name="wjj">未解决</string>
    <string name="help_me">问题求助</string>

    <string name="zhhy">综合行业</string>

    <string name="wxfwh">微信服务号：</string>
    <string name="phone">联系电话：</string>
    <string name="date">服务时间：</string>

    <string name="clear_all_size">清理完毕</string>

    <string name="ljql">立即升级</string>
    <string name="czxnb">充值金豆额度</string>
    <string name="czxnb2">1元人民币=100金豆</string>
    <string name="zffs">支付方式</string>
    <string name="jindou">金豆</string>


</resources>
