<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="17dp"
    android:layout_marginRight="17dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_email"
            android:textColor="@color/colorBlack0"
            android:textSize="@dimen/text_16sp" />

        <EditText
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/login_email_hint"
            android:textColor="@color/colorBlack0"
            android:textSize="@dimen/text_16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="1dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_format"
            android:textColor="@color/colorBlack0"
            android:textSize="@dimen/text_16sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="33.5dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/login_code_hint"
            android:textColor="@color/colorBlack0"
            android:textSize="@dimen/text_16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_code"
            android:textColor="@color/colorText_back"
            android:textSize="@dimen/text_14sp" />
    </LinearLayout>
</LinearLayout>