<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    >

    <include layout="@layout/common_toolbar" />

    <ScrollView
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@drawable/shape_color_text_background_bg" />
    <EditText
        android:id="@+id/edit_content"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/please_set"
        android:inputType="textMultiLine"
        android:maxLength="100"
        android:paddingLeft="15dp"
        android:textColor="@color/colorBlack0"
        android:textSize="@dimen/text_14sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_phone_and_email"
            android:textColor="@color/colorBlack0"
            android:textSize="@dimen/text_16sp" />

        <EditText
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/login_phone_hint_and_email"
            android:textColor="@color/colorBlack0"
            android:textSize="@dimen/text_16sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/show_wt"
        android:textColor="@color/colorBlack0"
        android:textSize="@dimen/text_16sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="7dp"/>

</LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp">

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/shape_color_text_background"
            android:paddingLeft="139dp"
            android:paddingTop="15dp"
            android:paddingRight="139dp"
            android:paddingBottom="15dp"
            android:text="@string/tjfk"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_14sp" />
    </RelativeLayout>

</RelativeLayout>