<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="83dp"
        android:src="@drawable/sueecss" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/feedback_success"
        android:textColor="@color/colorBlack0"
        android:textSize="@dimen/text_17sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/feedback_show_text"
        android:textColor="@color/colorText"
        android:textSize="@dimen/text_15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/shape_color_text_background"
            android:paddingLeft="146dp"
            android:paddingTop="15dp"
            android:paddingRight="146dp"
            android:paddingBottom="15dp"
            android:text="@string/close"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_14sp" />
    </RelativeLayout>
</LinearLayout>