<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@drawable/shape_color_text_background_bg" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt"
            android:textColor="@color/colorBlack0"
            android:textSize="@dimen/text_16sp" />

        <EditText
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/please_xkbt"
            android:textColor="@color/colorBlack0"
            android:textSize="@dimen/text_16sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/sczp"
        android:textColor="@color/colorBlack0"
        android:textSize="@dimen/text_16sp" />

    <ImageView
        android:id="@+id/iv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_200"
        android:padding="@dimen/dp_73"
        android:background="@color/transparent_db"
        android:layout_margin="@dimen/dp_15"
        android:src="@drawable/icon_zj_add"
        />

    <!--<android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"></android.support.v7.widget.RecyclerView>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="34dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape_color_text_background"
            android:gravity="center"
            android:paddingLeft="139dp"
            android:paddingTop="15dp"
            android:paddingRight="139dp"
            android:paddingBottom="15dp"
            android:text="@string/do_yes"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_14sp" />

        <TextView
            android:id="@+id/tv_do_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_save"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_color_text_kong"
            android:gravity="center"
            android:paddingLeft="139dp"
            android:paddingTop="15dp"
            android:paddingRight="139dp"
            android:paddingBottom="15dp"
            android:text="@string/do_cancel"
            android:textColor="@color/colorBlack0"
            android:textSize="@dimen/text_14sp" />
    </LinearLayout>

</LinearLayout>