<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_image"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_take_photo"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:gravity="center"
                android:text="@string/take_Photo"
                android:textColor="@color/colorBlack0"
                android:textSize="@dimen/text_15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorGrayC" />

            <TextView
                android:id="@+id/tv_select_photo"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:gravity="center"
                android:text="@string/do_select_xc"
                android:textColor="@color/colorBlack0"
                android:textSize="@dimen/text_15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:background="@color/colorLine" />

        <TextView
            android:id="@+id/tv_do_cancel"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/do_cancel"
            android:textColor="@color/colorBlack0"
            android:textSize="@dimen/text_15sp" />
    </LinearLayout>
</RelativeLayout>